--- a/index.html
+++ b/index.html
@@ -9,29 +9,36 @@
   </head>
   <body class="body">
     <h1 class="title">Adivina el número</h1>
-    <label class="label">Introduce aquí tu número:</label>
+    <label class="label" for="number">Introduce aquí tu número:</label>
     <input
       class="input-number js-number"
-      id="text"
+      id="number"
       type="text"
       name="text"
       value
     />
-    <button class="button js-button">Prueba</button>
+    <input
+      class="button"
+      id="button"
+      type="button"
+      value="Prueba"
+      name="button"
+    />
+    <!--<button class="button js-button">Prueba</button>-->
 
     <label class="label" for="text"></label>
     <input
-      class="input-clue"
+      class="input-clue js-clue"
       id="text"
       type="text"
       name="text"
       value=""
       placeholder="Pista: Escribe el número y dale a Prueba"
     />
-    <label class="label" for="text"></label>
+    <label class="label" for="counter"></label>
     <input
-      class="input-clue"
-      id="text"
+      class="input-clue js-counter"
+      id="counter"
       type="text"
       name="text"
       value=""
