--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       value
     />
     <input
-      class="button"
+      class="button js-button"
       id="button"
       type="button"
       value="Prueba"
